<resources>
    <string name="loading">加载中...</string>
    <string name="app_name">一家一店</string>
    <string name="main_front">首页</string>
    <string name="main_category">分类</string>
    <string name="main_shopping_car">购物车</string>
    <string name="main_mine">我的</string>
    <string name="toolbar_shopping_car_title">我的购物车</string>
    <string name="toolbar_shopping_car_option1">编辑</string>
    <string name="toolbar_shopping_car_option2">完成</string>
    <string name="toolbar_mine_title">我的一家一店</string>
    <string name="order_text">订单</string>
    <string name="householder_text">管家</string>
    <string name="order_click_text">点击查看全部订单</string>
    <string name="wallete_text">我的钱包</string>
    <string name="wallete_click_text">更多优惠</string>
    <string name="more_service_text">更多服务</string>
    <string name="more_service_click_text">点击进入更多服务</string>
    <string name="sc_check_text">结算</string>
    <string name="item_content_text">三星 （SAMSUNG） 850 EVO 系列120G 2.5英寸 SATA-3固态硬盘（MZ-75E120B/CN）</string>
    <string name="item_description_addition">三星SSD特惠风暴，新品好评返现金！</string>
    <string name="goods_item_detail_title_text">商品详情</string>
    <string name="txt_custom_service">客服</string>
    <string name="txt_attention">关注</string>
    <string name="search_hint_text">搜索关键字</string>
    <string name="btn_order_text">我要预定</string>
    <string name="btn_call_text">拨打视频电话</string>
    <string name="title_event_precheck">活动预定</string>
    <string name="event_precheck_input_phone">请输入电话号码</string>
    <string name="event_precheck_input_address">请输入房号 如3栋2单元1-1</string>
    <string name="btn_event_prechek">提交</string>
    <string name="title_activity_login">Sign in</string>
    <string name="str_back">返回</string>
    <string name="txt_account_capital">账户余额:</string>
    <string name="txt_account_setting">账户设置</string>
    <string name="txt_account_order">我的订单</string>
    <string name="txt_account_charge_record">充值记录</string>
    <string name="txt_order_all">全部</string>
    <string name="txt_order_not_pay">未支付</string>
    <string name="txt_order_onway">配送中</string>
    <string name="txt_order_done">已完成</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="event_frontpage_detail">活动预定</string>
    <string name="title_activity_event_list">活动列表</string>
    <string name="event_frontpage_inivalied_event">活动未到期</string>
    <string name="event_frontpage_overivalied_event">活动已过期</string>
    <string name="news_option_name">政务信息</string>
    <string name="txt_househ_direct_call">呼叫</string>
    <string name="txt_househ_leave_msg">留言</string>
    <string name="str_househ_chat_id">999999</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="str_account">账          号:</string>
    <string name="str_account_input_hint">请输入账号！</string>
    <string name="str_login">登录</string>
    <string name="str_isSavepass">记住用户名密码</string>
    <string name="login_progress">正在登陆，请稍后!</string>
    <string name="server_connect_error">服务器连接失败!</string>
    <string name="str_serverip">服务器地址: </string>
    <string name="str_serverport">服务器端口号: </string>
    <string name="str_serveripinput">请输入服务器地址! </string>
    <string name="str_serverportinput">请输入服务器端口号!</string>
    <string name="str_againlogin">账号在异处登陆，请重新登录</string>
    <string name="str_login_failed">登录系统失败</string>
    <string name="str_enterroom_failed">进入房间失败</string>
    <string name="str_lggin_failed">登录失败</string>
    <string name="str_exit">退出</string>
    <string name="str_accept">接受</string>
    <string name="str_refuse">拒绝</string>
    <string name="str_resume">确认</string>
    <string name="str_cancel">取消</string>
    <string name="str_pause">挂断</string>
    <string name="str_send">发送</string>
    <string name="str_call">呼叫</string>
    <string name="str_menu">菜单</string>
    <string name="str_switchcamera">切换摄像头</string>
    <string name="str_setting">设置</string>
    <string name="str_save">保存修改</string>
    <string name="no_onlines">当前没有在线用户</string>
    <string name="str_returncode_bussiness">呼叫对象正忙，请稍后再试</string>
    <string name="str_returncode_offline">呼叫用户不在线</string>
    <string name="str_user_offline">目标用户离线</string>
    <string name="str_returncode_requestcancel">用户取消呼叫</string>
    <string name="str_returncode_requestrefuse">用户拒绝被呼叫</string>
    <string name="str_returncode_disconnect">对方网络异常</string>
    <string name="str_returncode_timeout">呼叫超时</string>
    <string name="sessioning_reqite">请求与您通话！</string>
    <string name="str_calling">呼叫成功，正在等待用户响应</string>
    <string name="session_end">会话已经挂断</string>
    <string name="str_targetwrong">不能呼叫自己！</string>
    <string name="str_endsession">是否想要结束当前通话</string>
    <string name="end_session">结束通话</string>
    <string name="str_networkcheck">当前网络连接有异常，请检查网络</string>
    <string name="str_serverlink_close">与服务器断开连接，错误代码是</string>
    <string name="str_exitresume">是否想要退出整个应用程序</string>
    <string name="str_msgchatlist">文字聊天消息列表</string>
    <string name="str_notifitcation">iCloudSoft正在运行中</string>
    <string name="str_dialog_title_protip">AnyChatCallCenter提示</string>
    <string name="BACKING_RUNING">AnyChatCallCenter正在后台运行</string>
    <string name="company_msg">广州佰锐网络科技有限公司  版权所有</string>
    <string name="push_txt1">您的家人:{name},于{time}布防已开启 </string>
    <string name="push_txt2">您的家人:{name},于{time}布防已撤销 </string>
    <string name="push_txt3">您的家人:{name},于{time}已归家 </string>
    <string name="push_txt4">您的家人:{name},于{time}已离家 </string>
    <string name="push_txt5">您的家中于{time}有人非法入侵，请尽快确认 </string>
    <string name="please_select_item">请选择</string>
    <string name="take_photoes">拍照</string>
    <string name="select_from_local">从图库选择</string>
    <string name="sys_network_error">网络断开正在重连，请稍后&#8230;&#8230;</string>
    <string name="sys_network_error2">您操作过快&#8230;&#8230;请休息一下</string>
    <string name="sys_network_error1">网络断开,请检查网络后再登陆</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_more_label">加载更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">数据加载中&#8230;&#8230;</string>
    <string name="pull_to_refresh_tap_label">触摸下拉刷新</string>
    <string name="network_error">服务器异常&#044;请稍后重试！</string>
    <string name="no_data">暂无数据！</string>
    <string name="no_data1">数据已到最后！</string>
    <string name="get_data_failure">信息获取失败</string>
    <string name="request_failure">请求失败！</string>
    <string name="no_more_data_to_load">没有数据可以加载！</string>
    <string name="back_to_exit_app">再按一次退出</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_message_loading_data">正在加载数据，请稍等!</string>
    <string name="scan_code">二维码扫描</string>
    <string name="scan_failed">扫描失败</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="pull_up_to_enter_tv">上拉进入首页</string>
    <string name="look_tv">查看</string>
    <string name="register_failed">注册失败&#058;</string>
    <string name="change_failed">修改失败</string>
    <string name="resetpas_failed">重置失败&#058;效验码错误</string>
    <string name="register_success">注册成功</string>
    <string name="sms_success">短信请求发送成功，请注意查收</string>
    <string name="ret_success">重置密码成功</string>
    <string name="network_timeout">连接超时</string>
    <string name="network_connect_failed">服务器连接失败</string>
    <string name="network_not_response">服务器无响应&#044;请稍后再试</string>
    <string name="buzzer_on">蜂鸣器开启</string>
    <string name="buzzer_off">蜂鸣器关闭</string>
    <string name="operate_success">操作成功</string>
    <string name="operate_failed">操作失败</string>
    <string name="commit_failure">提交失败</string>
    <string name="save_picture_failed">图片保存失败</string>
    <string name="sd_card_unmounted">SD卡已卸载或不存在</string>
    <string name="refuse_upload_file">服务器拒绝上传该文件</string>
    <string name="send_success">发送成功</string>
    <string name="logining">一家一店登录中，请稍候...</string>
    <string name="registering">正在注册</string>
    <string name="please_login">请登录后再操作</string>
    <string name="upload_ing">正在上传头像</string>
    <string name="upload_sucess">上传头像成功</string>
    <string name="upload_erre">上传头像失败，请重新设置头像</string>
    <string name="no_rights_to_upload_picture">权限不足,无法上传图片到云相册</string>
    <string name="low_memory">磁盘空间不够,无法上传图片到云相册</string>
    <string name="mistake_type">客户端数据格式错误,请联系客服人员</string>
    <string name="receive_mistake_info">服务器返回信息有误</string>
    <string name="success_delete_device">已删除绑定设备</string>
    <string name="failed_delete_device">删除绑定设备失败</string>
    <string name="dialog_delete_photo">确定删除该图片?</string>
    <string name="upload_data">正在提交信息</string>
    <string name="change_device_OK">地址切换成功</string>
    <string name="change_device_failed">地址切换失败</string>
    <string name="login_failed">登录失败&#058;</string>
    <string name="user_auth_suceess">认证成功</string>
    <string name="user_auth_fail">认证失败</string>
    <string name="user_auth_cancel">取消认证</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_send_failed">分享失败，请检查网络连接。出错信息：</string>
    <string name="weibosdk_error_repeat_content">提交相同的信息</string>
    <string name="weibo_content">&#034;一家一店&#034;&#044;你的生活好帮手&#046;</string>
    <string name="picture_is_not_exist">图片不存在&#044;无法分享</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="errcode_no_image">分享图片不存在</string>
    <string name="score">积分</string>
    <string name="grade">等级</string>
    <string name="defence">布防</string>
    <string name="cancel_defence">撤防</string>
    <string name="keep_in_voice">语音通话中&#8230;&#8230;&#8230;</string>
    <string name="alarm_info">报警信息</string>
    <string name="father">爸爸</string>
    <string name="mother">妈妈</string>
    <string name="son">儿子</string>
    <string name="daughter">女儿</string>
    <string name="unit_zhang">张</string>
    <string name="cloud_eyes">云&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;眼</string>
    <string name="imprinting">印&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;记</string>
    <string name="cloud_photo_album">云&#160;&#160;相&#160;&#160;册</string>
    <string name="smart_app">慧&#160;&#160;应&#160;&#160;用</string>
    <string name="title_cloud_photo_album">云相册</string>
    <string name="title_smart_app">慧应用</string>
    <string name="self_center">个人中心</string>
    <string name="access_records">出入记录</string>
    <string name="defence_records">安防记录</string>
    <string name="warning_records">报警记录</string>
    <string name="remote_control">远程控制</string>
    <string name="service_center">服务中心</string>
    <string name="community_area">慧社区</string>
    <string name="business_service">商业服务</string>
    <string name="sunshine_government_affairs">阳光政务</string>
    <string name="download">下载</string>
    <string name="already_download">已下载</string>
    <string name="start_app">启动</string>
    <string name="upload_feedback_info">正在提交反馈信息</string>
    <string name="all">全部</string>
    <string name="intrude">入侵</string>
    <string name="temperature">温度</string>
    <string name="capture">定时抓拍</string>
</resources>