<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zgan.ohos.Fgmt.fg_myorder">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_alignParentTop="true"
        android:background="@color/color_bg_toolbar"
        android:elevation="4dp"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/householder_text"
                android:textColor="@color/color_txt_toobar"
                android:textSize="@dimen/toolbar_title_size" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_order_status"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/myorder_statusbar_height"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_order_all"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/myorder_toolbbar_color"
            android:gravity="center"
            android:text="@string/txt_order_all"
            android:textSize="@dimen/toolbar_option_size" />

        <TextView
            android:id="@+id/txt_order_not_pay"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@color/myorder_toolbbar_color"
            android:gravity="center"

            android:text="@string/txt_order_not_pay"
            android:textSize="@dimen/toolbar_option_size" />

        <TextView
            android:id="@+id/txt_order_onway"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@color/myorder_toolbbar_color"
            android:gravity="center"

            android:text="@string/txt_order_onway"
            android:textSize="@dimen/toolbar_option_size" />

        <TextView
            android:id="@+id/txt_order_done"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@color/myorder_toolbbar_color"
            android:gravity="center"

            android:text="@string/txt_order_done"
            android:textSize="@dimen/toolbar_option_size" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rc_orders"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/ll_order_status"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
</RelativeLayout>
